register user error/bug fixed